# pyrio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  TODO  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.md  make.bat  pyrio.md  quickstart.md  requirements.txt
pyrio/: __init__.py  base_stream.py  decorator.py  exception.py  file_stream.py  iterator.py  itertools_mixin.py  optional.py  stream.py
pyrio/decorators/: __init__.py  dispatcher.py  handler.py  mapper.py
pyrio/exceptions/: __init__.py  exception.py
pyrio/iterators/: __init__.py  generator.py  iterator.py  itertools_mixin.py  itertools_mixin.pyi  stream_generator.py
pyrio/streams/: __init__.py  base_stream.py  file_stream.py  stream.py
pyrio/utils/: __init__.py  alias_dict.py  decorator.py  dict_item.py  exception.py  file_options.py  optional.py
stream/: iterator.py  stream.py
tests/: conftest.py  test_alias_dict.py  test_dict_item.py  test_file_options.py  test_file_stream.py  test_intertools_integration.py  test_itertools_mixin.py  test_optional.py  test_stream.py  test_streams.py
tests/resources/: bar.csv  boo.xml  buzz.tsv  combine.csv  convertable.json  custom_root.xml  editable.csv  foo.json  foo.toml  foo.yml  long.json  nested.json  nested_dicts.json  parse_float.json  parse_float.toml  plain.txt  plain_dict.txt  test.toml
tests/resources/save_output/: append_map.txt  converted.csv  converted_null.csv  custom_root.xml  dict_2_plain.txt  filtered.toml  foo.txt  lorem.txt  merged.csv  test.csv  test.json  test.toml  test.tsv  test.xml  test.yaml  test_default_handle_null.toml  test_handle_null.json  test_null_handler.json  test_null_handler.xml  test_null_handler.yml  updated.csv  updated.json
