[tool.poetry]
name = "pyrio"
version = "1.3.1"
authors = ["kaliv0 <kaloyan.ivanov88@gmail.com>"]
readme = "README.md"
description = "Functional-style Streams library for processing collections and querying files (json, toml, yaml, xml, csv, tsv) - including creating and updating files. Provides out-of-the-box integration with itertools."
keywords = ["stream", "functional", "processing", "collections", "fluent API", "file processing", "queries"]
repository = "https://github.com/kaliv0/pyrio"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
xmltodict = "^0.14.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
tomli-w = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
