[tool.poetry]
name = "pyrio"
version = "1.3.4"
authors = ["kaliv0 <kaloyan.ivanov88@gmail.com>"]
readme = "README.md"
description = "Functional-style Streams library for processing collections. Supports querying files (json, toml, yaml, xml, csv, tsv) - as well as creating and updating them. Provides easy integration with itertools"
keywords = ["stream", "functional", "processing", "collections", "fluent API", "file processing", "queries"]
repository = "https://github.com/kaliv0/pyrio"
documentation = "https://pyrio.readthedocs.io/en/latest"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
xmltodict = "^0.14.2"
aldict = "^0.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
tomli-w = "^1.1.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
