[project]
name = "pyrio"
version = "1.4.7"
requires-python = ">=3.12"
authors = [
    { name = "kaliv0", email = "kaloyan.ivanov88@gmail.com" },
]
description = "Functional-style Streams library for processing collections. Supports querying files (json, toml, yaml, xml, csv, tsv, plain text) - as well as creating and updating them. Provides easy integration with itertools"
keywords = ["stream", "functional", "processing", "collections", "fluent API", "file processing", "queries"]
readme = "README.md"
license-files = ["LICENSE"]

dependencies = [
    "pyyaml>=6.0.2",
    "tomli-w>=1.1.0",
    "xmltodict>=0.14.2",
    "aldict>=1.0.2"
]

[dependency-groups]
dev = [
    "ruff>=0.6.3",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-nb>=1.1.2",
    "sphinx-autoapi>=3.3.3",
    "pre-commit>=4.2.0",
]

[project.urls]
Repository = "https://github.com/kaliv0/pyrio"
Documentation = "https://pyrio.readthedocs.io/en/latest"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
excludes = ["tests/"]

[tool.ruff]
fix = true
line-length = 110

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
